Jormungandr: enrich rest get_settings
    - add slots_per_epoch
    - add slot_duration
